fix: updated paths to default CMake module paths (UNIX-like)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,18 @@
 cmake_minimum_required( VERSION 3.21 )
 project( "CMake Uninstall"
 	DESCRIPTION "Common Uninstall Module for CMake"
-	VERSION 2022.347
+	VERSION 2024.319
 	LANGUAGES NONE )
 
+#set( CMAKE_INSTALL_PREFIX "/usr" )
 include( GNUInstallDirs )
 list( APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}" )
 include( UninstallTarget )
 
 
 install( FILES "UninstallTarget.cmake"
-	DESTINATION "${CMAKE_INSTALL_LIBEXECDIR}/cmake" )
+	DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/Modules" )
 
 install( FILES "cmake_uninstall.cmake.in"
-	DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake" )
+	DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/Modules/UninstallTarget" )
 
